--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,11 @@ header {
 
 /* form ====================== */
 
+#result{
+	display:none;
+
+	}
+
 .main__form {
 	padding: 40px;
 	border: 1px solid #d6cac2;
@@ -134,6 +139,7 @@ header {
 	padding: 20px;
 	font-size: 1em;
 }
+
 
 
 
