--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,6 @@ body {
 	width: 60%;
 }
 
-
-
 header {
     background: #f5f2f0;
 	border-bottom: 1px solid #f5f2f0;
@@ -54,7 +52,7 @@ header {
 	float: left;
 }
 
-.interest {
+aside {
 	width: 33.333333333%;
 	padding: 20px;
 	float: right;
@@ -94,14 +92,23 @@ header {
   	font-family: georgia, serif;
 }
 
+.main__result{
+	font-size: 1.5rem;
+	color: #bb0f00;
+
+}
+
+.main__result p:before {
+	content: ">> ";
+}
+
 /* content =================== */
 
 /* form ====================== */
 
 #result{
 	display:none;
-
-	}
+}
 
 .main__form {
 	padding: 40px;
